--- a/src/css/style.css
+++ b/src/css/style.css
@@ -101,7 +101,9 @@ img {
 .header {
   position: fixed;
   width: 100vw;
+  z-index: var(--z-100);
 }
+
 .nav {
   overflow: hidden;
   display: flex;
@@ -234,19 +236,30 @@ img {
   font-size: 4.1em;
   font-weight: var(--fw-extra-bold);
   letter-spacing: 5px;
+  position: relative;
+  z-index: 0;
+  animation-fill-mode: initial;
 }
 
-.home__dot {
-  border: 3px solid black;
+.home__dot::after {
+  content: '';
+  display: block;
+  border: 3px solid var(--color-black);
   background-color: var(--color-red);
-  border-radius: 50%;
   width: 1.5rem;
   height: 1.5rem;
-  animation: blink 2s infinite;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 0;
+  right: 1.5rem;
+  animation: blink 1s infinite;
 }
 
 @keyframes blink {
-  50% {
+  0% {
+    opacity: 1;
+  }
+  100% {
     opacity: 0;
   }
 }
@@ -269,39 +282,46 @@ img {
 
 /*===== PRODUCT =====*/
 .ear__one {
-  width: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
+  border: 1px solid red;
 }
+
 .ear__container {
-  width: 100%;
   display: flex;
   flex-direction: column;
 }
-.ear__text-animation div {
+
+/*===== Marquee =====*/
+.marquee {
+  display: flex;
+}
+
+.marquee-inner {
+  border: 1px solid green;
+  display: flex;
+  align-items: center;
+  height: 3rem;
+  font-family: var(--font-dot);
+  font-size: var(--h2-fs);
   color: var(--color-white);
   background-color: var(--color-red);
-  margin: 0 auto;
-  white-space: nowrap;
+  animation: infiniteMarquee 5s linear infinite;
+}
 
-  animation: infiniteText 5s linear infinite;
+.marquee-text {
+  border: 1px solid blue;
+  width: max-content;
 }
-.ear__text-animation div:nth-child(2) {
-  animation: infiniteText2 40s linear infinite;
+
+.marquee-text::after {
+  content: '-';
+  padding: 0 0.5rem;
 }
-@keyframes infiniteText {
-  0% {
-    transform: translateX(100%);
-  }
+
+@keyframes infiniteMarquee {
   100% {
     transform: translateX(-100%);
   }
 }
-@keyframes infiniteText2 {
-  0% {
-    transform: translateX(0%);
-  }
-  100% {
-    transform: translateX(-200%);
-  }
-}
-/*==================== MEDIA QUERIES ====================*/ ;
+
+/*==================== MEDIA QUERIES ====================*/
