--- a/src/css/style.css
+++ b/src/css/style.css
@@ -417,4 +417,88 @@ img {
   height: 20rem;
 }
 
+/*===== Footer =====*/
+.footer {
+  border: 1px solid rebeccapurple;
+  background-color: var(--color-light-gray);
+}
+
+.footer__content {
+  border: 1px solid red;
+  width: 100%;
+  height: 100%;
+}
+
+.footer__menu {
+  margin: 2rem 0;
+}
+
+.footer__list {
+  border-bottom: 1px solid var(--color-dark-gray);
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 90%;
+}
+
+.footer__list-first {
+  border-top: 1px solid var(--color-dark-gray);
+}
+
+.footer__list-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  color: var(--color-white);
+  padding: 0 1rem;
+  font-size: var(--h3-fs);
+  font-weight: var(--fw-medium);
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+
+.bx-chevron-down {
+  transition: 1s ease;
+}
+
+.footer__items {
+  /* border: 1px solid var(--color-dark-gray); */
+  display: none;
+  align-items: center;
+  height: 50px;
+  padding: 0 2.5rem;
+}
+
+.footer__items a {
+  color: var(--color-white);
+}
+
+.footer__items-app {
+  flex-direction: column;
+  height: 100px;
+}
+
+.footer__app {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  align-items: center;
+}
+
+/* active accordion */
+.active {
+  display: flex;
+  animation: open 0.2s linear;
+}
+
+@keyframes open {
+  50% {
+    transform: translateX(5px);
+  }
+}
+
+.icon-active {
+  transform: rotate(180deg);
+}
 /*==================== MEDIA QUERIES ====================*/
