--- a/src/css/style.css
+++ b/src/css/style.css
@@ -125,16 +125,22 @@ img {
 }
 
 .nav__logo {
+  /* border: 1px solid firebrick; */
   display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
   margin-left: 1rem;
   font-family: var(--font-dot);
   font-size: var(--h2-fs);
+  position: relative;
 }
 
 .nav__logo-text {
-  display: flex;
-  height: 3rem;
-  align-items: center;
+  /* border: 1px solid brown; */
+  position: absolute;
+  left: 0;
+  bottom: 1rem;
   color: var(--color-black);
   letter-spacing: 1.2px;
 }
@@ -254,15 +260,13 @@ img {
 
 .home__dot::after {
   content: '';
-  display: block;
+  display: flex;
+  align-self: flex-end;
   border: 3px solid var(--color-black);
   background-color: var(--color-red);
   width: 1.5rem;
   height: 1.5rem;
   border-radius: 50%;
-  position: absolute;
-  bottom: 0;
-  right: 1.5rem;
   animation: blink 1s infinite;
 }
 
@@ -419,12 +423,11 @@ img {
 
 /*===== Footer =====*/
 .footer {
-  border: 1px solid rebeccapurple;
+  border: 5px solid var(--color-dark-gray);
   background-color: var(--color-light-gray);
 }
 
 .footer__content {
-  border: 1px solid red;
   width: 100%;
   height: 100%;
 }
@@ -501,4 +504,116 @@ img {
 .icon-active {
   transform: rotate(180deg);
 }
+
+.footer__email-container {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.footer__newsletter-label {
+  font-size: var(--h3-fs);
+  font-weight: var(--fw-medium);
+  color: var(--color-white);
+  letter-spacing: 1px;
+  margin-bottom: 0.5rem;
+}
+
+.footer__email-inputs {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+
+#newsletter {
+  flex-grow: 1;
+  width: 100%;
+  height: 2.3rem;
+  padding: 0 1rem;
+}
+
+.footer__newsletter-btn {
+  margin-top: 0;
+  color: var(--color-white);
+  background-color: var(--color-dark-gray);
+  border: 2px solid black;
+}
+
+.footer__checkbox-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  width: 90%;
+  margin: 1.5rem auto;
+  padding: 0 0.5rem;
+}
+
+.footer__checkbox-wrap {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+input[type='checkbox'] {
+  display: none;
+}
+
+input[type='checkbox'] + label {
+  display: inline-block;
+  width: 50px;
+  height: 30px;
+  border: 3px solid var(--color-black);
+  background-color: var(--color-dark-gray);
+  position: relative;
+}
+
+input[id='checkbox1']:checked + label::after,
+input[id='checkbox2']:checked + label::after {
+  content: '✔';
+  font-size: 1.5rem;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  position: absolute;
+  left: -2px;
+  top: -4px;
+  color: var(--color-white);
+}
+
+.checkbox__text {
+  color: var(--color-white);
+  line-height: 1.4;
+  font-size: var(--small-fs);
+}
+
+.checkbox__text a {
+  color: var(--color-white);
+  cursor: pointer;
+}
+
+.footer__socialmedia-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  margin: 2.5rem auto;
+}
+
+.footer__socialmedia {
+  color: var(--color-dark-gray);
+  font-size: var(--big-fs);
+}
+
+.footer__copyright {
+  display: block;
+  text-align: center;
+  color: var(--color-white);
+  font-size: var(--smaller-fs);
+  padding: 0 0 1.5rem 0;
+}
+
 /*==================== MEDIA QUERIES ====================*/
