--- a/src/css/style.css
+++ b/src/css/style.css
@@ -74,6 +74,8 @@ body {
   font-family: var(--font-body);
   font-size: var(--normal-fs);
   background-color: var(--color-white);
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 h1,
@@ -111,7 +113,12 @@ img {
 /*===== NAVBAR =====*/
 .header {
   position: fixed;
-  width: 100vw;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
   z-index: var(--z-100);
 }
 
@@ -121,11 +128,11 @@ img {
   justify-content: space-between;
   align-items: center;
   height: 4rem;
+  width: 100%;
   background-color: var(--color-white);
 }
 
 .nav__logo {
-  /* border: 1px solid firebrick; */
   display: flex;
   width: 100%;
   height: 100%;
@@ -137,7 +144,6 @@ img {
 }
 
 .nav__logo-text {
-  /* border: 1px solid brown; */
   position: absolute;
   left: 0;
   bottom: 1rem;
@@ -226,6 +232,9 @@ img {
 }
 
 /*===== HOME =====*/
+.main {
+  width: 100vw;
+}
 .home {
   display: flex;
   justify-content: center;
@@ -308,7 +317,7 @@ img {
 .content {
   display: flex;
   flex-direction: column;
-  padding: 3rem 1.5rem;
+  padding: 3rem 1.5rem 0;
 }
 
 .title {
@@ -342,7 +351,7 @@ img {
   width: 100%;
   height: max-content;
   display: flex;
-  margin-bottom: 3rem;
+  margin: 3rem 0;
 }
 .ear__image {
   object-fit: cover;
@@ -617,3 +626,228 @@ input[id='checkbox2']:checked + label::after {
 }
 
 /*==================== MEDIA QUERIES ====================*/
+/* For smaller devices */
+/* like Galaxy Fold */
+@media screen and (max-width: 350px) {
+  .nav__item {
+    font-size: var(--h1-fs);
+  }
+  .nav__close {
+    font-size: var(--big-fs);
+  }
+  .nav__shadow {
+    top: 0;
+    left: 0;
+    height: 110vh;
+  }
+  .nav__menu {
+    bottom: 0;
+    height: 110vh;
+  }
+  .nav__btns {
+    gap: 0.7rem;
+  }
+  .nav__icon {
+    font-size: var(--h2-fs);
+  }
+  .footer__list-title,
+  .footer__newsletter-label {
+    font-size: var(--normal-fs-fs);
+  }
+  .footer__items,
+  .footer__email-inputs {
+    font-size: var(--small-fs);
+  }
+  .footer__newsletter-btn {
+    font-size: var(--small-fs);
+  }
+  input[type='checkbox'] + label {
+    width: 50px;
+    height: 25px;
+  }
+
+  input[id='checkbox1']:checked + label::after,
+  input[id='checkbox2']:checked + label::after {
+    width: 25px;
+    height: 25px;
+    font-size: var(--h3-fs);
+    left: -2.5px;
+    top: -2.5px;
+  }
+
+  /* main */
+  .home__title {
+    font-size: 3rem;
+  }
+  .home__image-container {
+    height: 16em;
+    position: relative;
+  }
+  .home__image {
+    position: absolute;
+    top: -23%;
+    object-fit: cover;
+  }
+  .home__dot::after {
+    width: 1.2rem;
+    height: 1.2rem;
+  }
+  .title {
+    font-size: var(--h1-fs);
+  }
+  .subtitle {
+    font-size: var(--normal-fs);
+  }
+  .paragraph {
+    font-size: var(--normal-fs);
+  }
+  .ear__image {
+    object-position: 26% bottom;
+  }
+}
+
+/* For medium devices */
+/* 세로 */
+@media screen and (min-width: 568px) {
+  input[type='checkbox'] + label {
+    width: 25px;
+    height: 25px;
+  }
+
+  input[id='checkbox1']:checked + label::after,
+  input[id='checkbox2']:checked + label::after {
+    width: 25px;
+    height: 25px;
+    font-size: var(--h3-fs);
+    left: -2.5px;
+    top: -2.5px;
+  }
+}
+
+/* 가로 */
+@media screen and (min-width: 768px) {
+  .header {
+    position: absolute;
+  }
+
+  .nav__shadow,
+  .nav__btns,
+  .nav__close {
+    display: none;
+  }
+  .nav__logo {
+    margin-left: 1.5rem;
+  }
+  .nav__menu {
+    position: static;
+    font-size: var(--h3-fs);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 4rem;
+    background-color: transparent;
+  }
+  .nav__list {
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 2rem;
+    height: 100%;
+    width: 100%;
+    padding-right: 2rem;
+  }
+  .nav__item {
+    width: max-content;
+  }
+  .nav__link {
+    color: var(--color-black);
+    font-size: var(--h3-fs);
+  }
+
+  .footer__content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr auto auto;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+    padding-top: 2rem;
+  }
+  .footer__menu {
+    grid-area: 1/1/2/2;
+    margin: 0;
+  }
+  .footer__newsletter {
+    grid-area: 1/2/2/3;
+  }
+  .footer__socialmedia-container {
+    grid-area: 2/1/3/3;
+    height: 4rem;
+    margin: 2rem 0 0;
+    padding: 0;
+  }
+  .footer__copyright {
+    grid-area: 3/1/4/3;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 4rem;
+    margin: 0;
+    padding: 0;
+  }
+
+  /* main */
+  .home__title {
+    font-size: 7rem;
+  }
+  .home__image-container {
+    height: 100%;
+  }
+  .home__image {
+    width: 30em;
+    height: 30em;
+  }
+
+  .content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-content: center;
+    place-items: center;
+    gap: 1.5rem;
+    padding: 0 1.5rem;
+    margin: 4rem 0;
+  }
+  .content__wrap {
+    padding: 1rem;
+    order: 2;
+  }
+  .paragraph {
+    line-height: 1.5rem;
+  }
+  .image__container {
+    order: 1;
+  }
+}
+
+/* For large devices */
+@media screen and (min-width: 1024px) {
+  .home__dot::after {
+    width: 2rem;
+    height: 2rem;
+  }
+  .video__container {
+    /* width: 10%; */
+    display: flex;
+
+    border: 1px solid red;
+    /* position: relative; */
+  }
+  .video__container iframe {
+    border: 5px solid black;
+    padding-top: 56.25%;
+    width: 100%;
+    /* position: absolute; */
+    top: 0;
+    left: 0;
+  }
+}
