--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,236 +1,4 @@
-/*==================== FONT FACE ====================*/
-@font-face {
-  font-family: 'quaxiculo';
-  src: url('../font/Quaxiculo.ttf') format('truetype');
-}
-
-/*==================== Google Font ====================*/
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Noto+Sans+Mono:wght@300;400;500;600;700;800;900&display=swap');
-
-/*==================== VARIABLES CSS ====================*/
-:root {
-  /*===== Colors =====*/
-  --color-white: #fff;
-  --color-light-gray: #565656;
-  --color-dark-gray: #181715;
-  --color-black: #000;
-  --color-red: #d21314;
-
-  /*===== Font Family =====*/
-  --font-body: 'Noto Sans Mono', monospace;
-  --font-dot: 'quaxiculo';
-  --font-bold: 'Fredoka One', cursive;
-
-  /*===== Font Weight =====*/
-  --fw-light: 300;
-  --fw-regular: 400;
-  --fw-medium: 500;
-  --fw-semi-bold: 600;
-  --fw-bold: 700;
-  --fw-extra-bold: 800;
-
-  /*===== Font Size =====*/
-  --big-fs: 2rem; /* 32px */
-  --h1-fs: 1.5rem; /* 24px */
-  --h2-fs: 1.25rem; /* 20px */
-  --h3-fs: 1.125rem; /* 18px */
-  --normal-fs: 0.938rem; /* 15px */
-  --small-fs: 0.813rem; /* 13px */
-  --smaller-fs: 0.75rem; /* 12px */
-
-  /*===== z-index =====*/
-  --z-1: 1;
-  --z-10: 10;
-  --z-100: 100;
-}
-
-/* Font size for large devices */
-@media screen and (min-width: 968px) {
-  :root {
-    --big-fs: 3rem; /* 48px */
-    --h1-fs: 2.25rem; /* 36px */
-    --h2-fs: 1.5rem; /* 24px */
-    --h3-fs: 1.25rem; /* 20px */
-    --normal-fs: 1rem; /* 16px */
-    --small-fs: 0.875rem; /* 14px */
-    --smaller-fs: 0.813rem; /* 13px */
-  }
-}
-
-/*==================== BASE ====================*/
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: var(--font-body);
-  font-size: var(--normal-fs);
-  background-color: var(--color-white);
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-h1,
-h2,
-h3 {
-  margin: 0;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  cursor: pointer;
-}
-
-img {
-  max-width: 100%;
-}
-
-.button {
-  display: inline-block;
-  border: none;
-  border-radius: 10px;
-  width: max-content;
-  padding: 0.5rem 1rem;
-  font-size: var(--h3-fs);
-  font-weight: var(--fw-semi-bold);
-  text-transform: uppercase;
-  margin-top: 1.5rem;
-}
 /*==================== CONTENTS ====================*/
-
-/*===== NAVBAR =====*/
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  z-index: var(--z-100);
-}
-
-.nav {
-  overflow: hidden;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 4rem;
-  width: 100%;
-  background-color: var(--color-white);
-}
-
-.nav__logo {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  margin-left: 1rem;
-  font-family: var(--font-dot);
-  font-size: var(--h2-fs);
-  position: relative;
-}
-
-.nav__logo-text {
-  position: absolute;
-  left: 0;
-  bottom: 1rem;
-  color: var(--color-black);
-  letter-spacing: 1.2px;
-}
-
-.nav__shadow {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.6);
-  display: none;
-  opacity: 0;
-  transition: 0.3s ease;
-}
-
-.nav__menu {
-  position: absolute;
-  top: 0;
-  right: -100%;
-  width: 75vw;
-  height: 100vh;
-  background-color: var(--color-dark-gray);
-  font-size: var(--big-fs);
-  font-weight: var(--fw-semi-bold);
-  color: var(--color-white);
-  z-index: var(--z-10);
-  transition: 0.3s ease;
-}
-
-.nav__list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-left: 3rem;
-  height: 100vh;
-  gap: 4rem;
-  text-align: left;
-}
-
-.nav__link {
-  color: var(--color-white);
-}
-
-.nav__link span {
-  margin-left: 0.4rem;
-}
-
-.nav__close {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  font-size: 3.5rem;
-  cursor: pointer;
-}
-
-.nav__btns {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 1rem;
-  gap: 1rem;
-  font-size: var(--h1-fs);
-}
-
-.nav__icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 2rem;
-  height: 2rem;
-  cursor: pointer;
-}
-
-/* show menu */
-.show__menu {
-  right: 0;
-}
-
-.show__menu-shadow {
-  opacity: 1;
-  display: block;
-}
-
 /*===== HOME =====*/
 .main {
   width: 100vw;
@@ -353,6 +121,7 @@ img {
   display: flex;
   margin: 3rem 0;
 }
+
 .ear__image {
   object-fit: cover;
   object-position: 15% bottom;
@@ -430,379 +199,57 @@ img {
   height: 20rem;
 }
 
-/*===== Footer =====*/
-.footer {
-  border: 5px solid var(--color-dark-gray);
-  background-color: var(--color-light-gray);
-}
-
-.footer__content {
-  width: 100%;
-  height: 100%;
-}
-
-.footer__menu {
-  margin: 2rem 0;
-}
-
-.footer__list {
-  border-bottom: 1px solid var(--color-dark-gray);
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  width: 90%;
-}
-
-.footer__list-first {
-  border-top: 1px solid var(--color-dark-gray);
-}
-
-.footer__list-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 50px;
-  color: var(--color-white);
-  padding: 0 1rem;
-  font-size: var(--h3-fs);
-  font-weight: var(--fw-medium);
-  letter-spacing: 1px;
-  cursor: pointer;
-}
-
-.bx-chevron-down {
-  transition: 1s ease;
-}
-
-.footer__items {
-  /* border: 1px solid var(--color-dark-gray); */
-  display: none;
-  align-items: center;
-  height: 50px;
-  padding: 0 2.5rem;
-}
-
-.footer__items a {
-  color: var(--color-white);
-}
-
-.footer__items-app {
-  flex-direction: column;
-  height: 100px;
-}
-
-.footer__app {
-  display: flex;
-  width: 100%;
-  height: 50px;
-  align-items: center;
-}
-
-/* active accordion */
-.active {
-  display: flex;
-  animation: open 0.2s linear;
-}
-
-@keyframes open {
-  50% {
-    transform: translateX(5px);
-  }
-}
-
-.icon-active {
-  transform: rotate(180deg);
-}
-
-.footer__email-container {
-  display: flex;
-  flex-direction: column;
-  width: 90%;
-  margin: 0 auto;
-}
-
-.footer__newsletter-label {
-  font-size: var(--h3-fs);
-  font-weight: var(--fw-medium);
-  color: var(--color-white);
-  letter-spacing: 1px;
-  margin-bottom: 0.5rem;
-}
-
-.footer__email-inputs {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1rem;
-}
-
-#newsletter {
-  flex-grow: 1;
-  width: 100%;
-  height: 2.3rem;
-  padding: 0 1rem;
-}
-
-.footer__newsletter-btn {
-  margin-top: 0;
-  color: var(--color-white);
-  background-color: var(--color-dark-gray);
-  border: 2px solid black;
-}
-
-.footer__checkbox-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  width: 90%;
-  margin: 1.5rem auto;
-  padding: 0 0.5rem;
-}
-
-.footer__checkbox-wrap {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-}
-
-input[type='checkbox'] {
-  display: none;
-}
-
-input[type='checkbox'] + label {
-  display: inline-block;
-  width: 50px;
-  height: 30px;
-  border: 3px solid var(--color-black);
-  background-color: var(--color-dark-gray);
-  position: relative;
-}
-
-input[id='checkbox1']:checked + label::after,
-input[id='checkbox2']:checked + label::after {
-  content: '✔';
-  font-size: 1.5rem;
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  position: absolute;
-  left: -2px;
-  top: -4px;
-  color: var(--color-white);
-}
-
-.checkbox__text {
-  color: var(--color-white);
-  line-height: 1.4;
-  font-size: var(--small-fs);
-}
-
-.checkbox__text a {
-  color: var(--color-white);
-  cursor: pointer;
-}
-
-.footer__socialmedia-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1.5rem;
-  margin: 2.5rem auto;
-}
-
-.footer__socialmedia {
-  color: var(--color-dark-gray);
-  font-size: var(--big-fs);
-}
-
-.footer__copyright {
-  display: block;
-  text-align: center;
-  color: var(--color-white);
-  font-size: var(--smaller-fs);
-  padding: 0 0 1.5rem 0;
-}
-
 /*==================== MEDIA QUERIES ====================*/
 /* For smaller devices */
 /* like Galaxy Fold */
 @media screen and (max-width: 350px) {
-  .nav__item {
-    font-size: var(--h1-fs);
-  }
-  .nav__close {
-    font-size: var(--big-fs);
-  }
-  .nav__shadow {
-    top: 0;
-    left: 0;
-    height: 110vh;
-  }
-  .nav__menu {
-    bottom: 0;
-    height: 110vh;
-  }
-  .nav__btns {
-    gap: 0.7rem;
-  }
-  .nav__icon {
-    font-size: var(--h2-fs);
-  }
-  .footer__list-title,
-  .footer__newsletter-label {
-    font-size: var(--normal-fs-fs);
-  }
-  .footer__items,
-  .footer__email-inputs {
-    font-size: var(--small-fs);
-  }
-  .footer__newsletter-btn {
-    font-size: var(--small-fs);
-  }
-  input[type='checkbox'] + label {
-    width: 50px;
-    height: 25px;
-  }
-
-  input[id='checkbox1']:checked + label::after,
-  input[id='checkbox2']:checked + label::after {
-    width: 25px;
-    height: 25px;
-    font-size: var(--h3-fs);
-    left: -2.5px;
-    top: -2.5px;
-  }
-
-  /* main */
   .home__title {
     font-size: 3rem;
   }
+
   .home__image-container {
     height: 16em;
     position: relative;
   }
+
   .home__image {
     position: absolute;
-    top: -23%;
+    top: -20%;
     object-fit: cover;
   }
+
   .home__dot::after {
     width: 1.2rem;
     height: 1.2rem;
   }
+
   .title {
     font-size: var(--h1-fs);
   }
+
   .subtitle {
     font-size: var(--normal-fs);
   }
+
   .paragraph {
     font-size: var(--normal-fs);
   }
+
   .ear__image {
     object-position: 26% bottom;
   }
 }
 
-/* For medium devices */
-/* 세로 */
-@media screen and (min-width: 568px) {
-  input[type='checkbox'] + label {
-    width: 25px;
-    height: 25px;
-  }
-
-  input[id='checkbox1']:checked + label::after,
-  input[id='checkbox2']:checked + label::after {
-    width: 25px;
-    height: 25px;
-    font-size: var(--h3-fs);
-    left: -2.5px;
-    top: -2.5px;
-  }
-}
-
 /* 가로 */
 @media screen and (min-width: 768px) {
-  .header {
-    position: absolute;
-  }
-
-  .nav__shadow,
-  .nav__btns,
-  .nav__close {
-    display: none;
-  }
-  .nav__logo {
-    margin-left: 1.5rem;
-  }
-  .nav__menu {
-    position: static;
-    font-size: var(--h3-fs);
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 4rem;
-    background-color: transparent;
-  }
-  .nav__list {
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 2rem;
-    height: 100%;
-    width: 100%;
-    padding-right: 2rem;
-  }
-  .nav__item {
-    width: max-content;
-  }
-  .nav__link {
-    color: var(--color-black);
-    font-size: var(--h3-fs);
-  }
-
-  .footer__content {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr auto auto;
-    grid-column-gap: 1rem;
-    grid-row-gap: 1rem;
-    padding-top: 2rem;
-  }
-  .footer__menu {
-    grid-area: 1/1/2/2;
-    margin: 0;
-  }
-  .footer__newsletter {
-    grid-area: 1/2/2/3;
-  }
-  .footer__socialmedia-container {
-    grid-area: 2/1/3/3;
-    height: 4rem;
-    margin: 2rem 0 0;
-    padding: 0;
-  }
-  .footer__copyright {
-    grid-area: 3/1/4/3;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 4rem;
-    margin: 0;
-    padding: 0;
-  }
-
-  /* main */
   .home__title {
     font-size: 7rem;
   }
+
   .home__image-container {
     height: 100%;
   }
+
   .home__image {
     width: 30em;
     height: 30em;
@@ -817,13 +264,16 @@ input[id='checkbox2']:checked + label::after {
     padding: 0 1.5rem;
     margin: 4rem 0;
   }
+
   .content__wrap {
     padding: 1rem;
     order: 2;
   }
+
   .paragraph {
     line-height: 1.5rem;
   }
+
   .image__container {
     order: 1;
   }
@@ -835,19 +285,46 @@ input[id='checkbox2']:checked + label::after {
     width: 2rem;
     height: 2rem;
   }
-  .video__container {
-    /* width: 10%; */
-    display: flex;
 
-    border: 1px solid red;
-    /* position: relative; */
-  }
-  .video__container iframe {
-    border: 5px solid black;
-    padding-top: 56.25%;
+  .video__container {
+    max-width: 1024px;
     width: 100%;
-    /* position: absolute; */
-    top: 0;
-    left: 0;
+    margin: 3rem auto 0;
+    display: flex;
+    padding-top: 576px;
+  }
+
+  .content {
+    max-width: 1024px;
+    margin: 3rem auto;
+  }
+
+  .title,
+  .subtitle,
+  .paragraph {
+    margin-bottom: 1.5rem;
+  }
+
+  .paragraph {
+    line-height: 1.7;
+  }
+
+  .image__container {
+    height: 30rem;
+    overflow: hidden;
+  }
+
+  .ear__image {
+    transform: scale(1);
+    object-position: 20% bottom;
+    height: 100%;
+    width: 100%;
+  }
+
+  .about__image {
+    transform: scale(1.2);
+    object-position: 50% bottom;
+    height: 100%;
+    width: 100%;
   }
 }
