--- a/src/css/ear-one.css
+++ b/src/css/ear-one.css
@@ -36,13 +36,22 @@
 }
 
 /* ===== ear (1) product ===== */
-/* main description */
-.ear__one-product {
+.main {
+  scroll-snap-type: y mandatory;
+  scroll-snap-points-y: repeat(100vh);
+  overflow-y: scroll;
+  height: 100vh;
+}
+.section {
+  border: 3px dashed blue;
+  scroll-snap-align: start;
+  scroll-margin-top: 4.3rem;
   display: flex;
   width: 100vw;
   height: 100vh;
 }
 
+/* main description */
 .product__container {
   width: 100%;
   height: 100%;
@@ -51,14 +60,14 @@
   position: relative;
 }
 
-.swiper {
+.product__swiper {
   position: absolute;
   top: 9%;
   width: 100vw;
   height: 45%;
 }
 
-.swiper-slide {
+.product__swiper-slide {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -72,8 +81,8 @@
   background-color: var(--color-black);
 }
 
-.swiper-slide img {
-  width: 90%;
+.product__swiper-slide img {
+  width: 80%;
 }
 
 /* product text content */
@@ -155,11 +164,143 @@
   background-color: var(--color-red);
 }
 
-/* hide swiper & hide carbon image */
+/* hide swiper */
 .hide__swiper {
   display: none;
 }
 
+/*  Product Description Details */
+.ear__description-detail {
+  width: 100vw;
+  height: calc(100vh - 4.3rem);
+}
+.description__detail-container {
+  width: 100%;
+  height: 100%;
+}
+/* swiper */
+.description__detail-swiper {
+  height: 100%;
+}
+.description__detail-swiper-wrapper {
+  /* height: 95%; */
+  height: 100%;
+}
+.description__detail-swiper-slide {
+  height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  overflow: hidden;
+}
+.slide__one {
+  background-color: var(--color-black);
+}
+.slide__two {
+  background-color: var(--color-white);
+}
+.slide__three {
+  background-color: var(--color-black);
+}
+.slide__four {
+  background-color: var(--color-white);
+}
+
+.image__one {
+  width: 85%;
+  position: absolute;
+  top: 5%;
+  left: -15%;
+}
+.detail-swiper-image-container {
+  width: 100%;
+  height: 100%;
+}
+.image__two {
+  position: absolute;
+  object-fit: cover;
+  object-position: 0% bottom;
+  height: 23rem;
+  top: 13%;
+  right: -6%;
+}
+.image__three {
+  width: 100%;
+  position: absolute;
+  top: 20%;
+  left: 40%;
+  transform: scale(2);
+}
+
+.image__four {
+  position: absolute;
+  object-fit: cover;
+  object-position: 29% bottom;
+  height: 28rem;
+  top: 3%;
+  right: 10%;
+}
+
+.detail-swiper-text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  position: absolute;
+  bottom: 5%;
+  left: 0;
+  padding: 1rem;
+  margin-bottom: 0.5rem;
+  background: rgba(16, 16, 16, 0.8);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4.5px);
+}
+
+.detail-swiper-title {
+  color: var(--color-white);
+  font-family: var(--font-dot);
+  font-size: var(--normal-fs);
+  letter-spacing: 2px;
+  margin-top: 0.5rem;
+}
+.detail-swiper-paragraph {
+  color: var(--color-white);
+  font-size: var(--small-fs);
+  font-weight: var(--fw-medium);
+  letter-spacing: 1px;
+  line-height: 1.4;
+}
+/* pagination */
+.description__detail-pagination {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  margin: 0 auto;
+}
+
+.description__detail-pagination .swiper-pagination-bullet {
+  width: 10px;
+  height: 10px;
+  border: 2px solid var(--color-red);
+  background: transparent;
+  opacity: 1;
+}
+
+.description__detail-pagination .swiper-pagination-bullet-active {
+  width: 30px;
+  transition: width 0.5s;
+  border-radius: 5px;
+  background: var(--color-red);
+  border: 1px solid transparent;
+}
+
+/* Product Features */
+.product__features {
+  width: 100vw;
+  height: calc(100vh - 4.3rem);
+}
 /*==================== MEDIA QUERIES ====================*/
 /* For smaller devices */
 /* like Galaxy Fold */
