--- a/src/css/ear-one.css
+++ b/src/css/ear-one.css
@@ -37,24 +37,14 @@
 
 /* ===== ear (1) product ===== */
 .main {
-  border: 3px solid teal;
-  scroll-snap-type: y mandatory;
-  overflow-y: scroll;
-  /* height: fit-content; */
-  height: 100vh;
-  /* height: 100%; */
-  /* scroll-behavior: smooth; */
-}
-.section {
-  border: 2px dashed blue;
-  scroll-snap-align: center;
-  scroll-margin-top: 4.3rem;
-  display: flex;
   width: 100vw;
   height: 100%;
 }
-.footer {
-  scroll-snap-align: start;
+
+.section {
+  display: flex;
+  width: 100vw;
+  height: 100%;
 }
 
 /* main description */
@@ -83,6 +73,7 @@
 .black__earphone .swiper-wrapper .swiper-slide {
   background-color: var(--color-white);
 }
+
 .white__earphone .swiper-wrapper .swiper-slide {
   background-color: var(--color-black);
 }
@@ -109,27 +100,33 @@
   font-size: var(--small-fs);
   margin-bottom: 0.5rem;
 }
+
 .product__swipe-icon:first-child {
   font-size: var(--h3-fs);
   animation: swipeLeft 1.5s linear infinite;
 }
+
 @keyframes swipeLeft {
   50% {
     transform: translateX(0.5rem);
   }
 }
+
 .product__swipe-icon:last-child {
   font-size: var(--h3-fs);
   animation: swipeRight 1.5s linear infinite;
 }
+
 @keyframes swipeRight {
   50% {
     transform: translateX(-0.5rem);
   }
 }
+
 .product__swipe-text {
   font-weight: var(--fw-bold);
 }
+
 .product__title {
   font-size: var(--h3-fs);
   margin-bottom: 0.5rem;
@@ -166,6 +163,7 @@
   font-weight: var(--fw-bold);
   letter-spacing: 1px;
 }
+
 .button__cart {
   background-color: var(--color-red);
 }
@@ -180,18 +178,21 @@
   width: 100vw;
   height: calc(100vh - 4.3rem);
 }
+
 .description__detail-container {
   width: 100%;
   height: 100%;
 }
+
 /* swiper */
 .description__detail-swiper {
   height: 100%;
 }
+
 .description__detail-swiper-wrapper {
-  /* height: 95%; */
   height: 100%;
 }
+
 .description__detail-swiper-slide {
   height: 100%;
   position: relative;
@@ -201,15 +202,19 @@
   align-items: center;
   overflow: hidden;
 }
+
 .slide__one {
   background-color: var(--color-black);
 }
+
 .slide__two {
   background-color: var(--color-white);
 }
+
 .slide__three {
   background-color: var(--color-black);
 }
+
 .slide__four {
   background-color: var(--color-white);
 }
@@ -220,10 +225,12 @@
   top: 5%;
   left: -15%;
 }
+
 .detail-swiper-image-container {
   width: 100%;
   height: 100%;
 }
+
 .image__two {
   position: absolute;
   object-fit: cover;
@@ -232,6 +239,7 @@
   top: 13%;
   right: -6%;
 }
+
 .image__three {
   width: 100%;
   position: absolute;
@@ -271,6 +279,7 @@
   letter-spacing: 2px;
   margin-top: 0.5rem;
 }
+
 .detail-swiper-paragraph {
   color: var(--color-white);
   font-size: var(--small-fs);
@@ -278,6 +287,7 @@
   letter-spacing: 1px;
   line-height: 1.4;
 }
+
 /* pagination */
 .description__detail-pagination {
   position: absolute;
@@ -304,15 +314,13 @@
 
 /* Product Features */
 .product__features {
-  border: 1px solid red;
   width: 100%;
   height: calc(100% - 4.3rem);
-
   display: flex;
   flex-direction: column;
 }
+
 .product__feature-title {
-  border: 1px solid blue;
   margin: 1rem;
   font-family: var(--font-body);
   text-transform: uppercase;
@@ -321,39 +329,43 @@
 }
 
 .product__feature-accordion {
-  border: 1px solid pink;
-  margin: 0 1rem;
+  margin: 0 1rem 1rem;
 }
+
 .accordion__item {
-  border: 1px solid red;
-  /* border-bottom: 2px solid var(--color-black); */
+  border-bottom: 2px solid var(--color-black);
   padding: 1rem 0;
   overflow: hidden;
 }
+
 .accordion__link {
-  border: 1px solid orange;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  border: none;
   font-size: var(--h3-fs);
   text-transform: uppercase;
   color: var(--color-black);
   background-color: transparent;
   cursor: pointer;
 }
+
 .feature__accordion-icon {
   font-size: var(--h2-fs);
   transition: 0.2s linear;
 }
+
 .accordion__content {
-  /* display: none; */
-  border: 1px solid blue;
-  opacity: 0;
+  display: flex;
+  flex-direction: column;
   max-height: 0;
+  padding: 0 1rem;
+  opacity: 0;
   overflow: hidden;
   transition: 0.2s linear;
 }
+
 .dimensions__content {
   display: flex;
   flex-direction: column;
@@ -364,36 +376,71 @@
   display: flex;
   flex-direction: column;
 }
+
 .dimensions__title {
-  border: 1px solid blue;
   font-size: var(--h3-fs);
   margin-bottom: 1rem;
 }
+
+.dimensions__image-warp {
+  margin-bottom: 1rem;
+}
+
+.dimensions__image-warp:last-child {
+  margin-bottom: 0;
+}
+
+.dimensions-wrap {
+  margin-bottom: 1rem;
+}
+
 .detail-wrap {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-bottom: 1rem;
+  align-items: flex-start;
+  width: 100%;
+  line-height: 1.4;
+  padding: 0.2rem 0;
 }
-.standards {
+
+.standard {
+  flex: 1;
   font-weight: var(--fw-semi-bold);
   text-align: left;
 }
-.values {
+
+.value {
+  flex: 2;
   font-weight: var(--fw-regular);
   text-align: right;
+}
+
+.sound__content {
+  display: flex;
+  flex-direction: column;
+}
+
+.sound__content .detail-wrap {
+  margin-bottom: 0;
+}
+
+.voice__content {
+  display: flex;
+  flex-direction: column;
 }
 
 /* active feature icon & content */
 .active__feature-icon {
   transform: rotate(90deg);
 }
+
 .active__feature-content {
   display: flex;
   opacity: 1;
   margin-top: 1rem;
   max-height: max-content;
 }
+
 /*==================== MEDIA QUERIES ====================*/
 /* For smaller devices */
 /* like Galaxy Fold */
