--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -34,3 +34,73 @@
   --z-10: 10;
   --z-100: 100;
 }
+
+/* ===== about us main ===== */
+.about__hero {
+  /* border: 3px solid blue; */
+  width: 100vw;
+  height: 100vh;
+  /* ? height 100vh - 4.3rem?? */
+  /* ? margin top 4.3rem? */
+}
+.about__hero-container {
+  height: 100%;
+  position: relative;
+}
+.about__hero-image-warp {
+  height: 100vh;
+  background: url(../../static/images/about-us-hero.jpg);
+  background-size: cover;
+  background-position: 48%;
+}
+.about__hero-text-wrap {
+  border: 1px solid blue;
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(
+    180deg,
+    var(--color-black) 0%,
+    var(--color-dark-gray) 10%,
+    transparent 100%
+  );
+}
+.about__hero-title {
+  /* border: 1px solid white; */
+  margin-top: 4.3rem;
+  color: var(--color-white);
+  font-size: var(--h1-fs);
+  font-weight: var(--fw-medium);
+  padding: 1rem;
+}
+.about__hero-line {
+  border-top: 2px solid var(--color-white);
+  width: 20%;
+  margin-left: 1rem;
+  animation: lineAppear 1s linear;
+}
+
+@keyframes lineAppear {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 20%;
+  }
+}
+
+.about__hero-paragraph {
+  /* border: 1px solid green; */
+  padding: 1rem;
+  color: var(--color-white);
+  font-size: var(--normal-fs);
+  font-weight: var(--fw-light);
+  line-height: 1.4;
+  letter-spacing: 1px;
+}
+/*==================== MEDIA QUERIES ====================*/
