--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,39 @@
 /*==================== CONTENTS ====================*/
+/*===== SCROLL MAGIC CLASS =====*/
+.show .content__wrap {
+  animation: appearFromRight 1.3s;
+}
+
+.show .ear__image {
+  animation: appearFromBottom 1.3s;
+}
+
+.show .about__image {
+  animation: appearFromBottom 1.3s;
+}
+
+@keyframes appearFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes appearFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(10rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 /*===== HOME =====*/
 .main {
   width: 100vw;
